Project

General

Profile

Actions

Bug #18030

closed

tests: unittest_pglog timeout

Added by Loïc Dachary over 7 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 1 (0 open1 closed)

Related to Ceph - Bug #23504: tests: unittest_pglog timeoutResolvedNathan Cutler03/29/2018

Actions
Actions #1

Updated by Loïc Dachary over 7 years ago

  • Description updated (diff)
  • Release set to jewel
Actions #2

Updated by Samuel Just over 7 years ago

  • Assignee set to Loïc Dachary
  • Priority changed from Normal to Urgent
Actions #3

Updated by Loïc Dachary over 7 years ago

https://jenkins.ceph.com/job/ceph-pull-requests/15177/console

155/155 Test #144: unittest_pglog ..........................***Timeout 3600.00 sec
[==========] Running 17 tests from 1 test case.
[----------] Global test environment set-up.
[----------] 17 tests from PGLogTest
[ RUN      ] PGLogTest.rewind_divergent_log

[WARNING] /home/jenkins-build/build/workspace/ceph-pull-requests/src/googletest/googletest/src/gtest-death-test.cc:836:: Death tests use fork(), which is unsafe particularly in a threaded context. For this test, Google Test detected 3 threads.
..

    144 - unittest_pglog (Timeout)

Actions #4

Updated by Loïc Dachary over 7 years ago

while : ; do ctest -R unittest_pglog -V >& out || break ; done

running on rex001

Actions #5

Updated by Loïc Dachary over 7 years ago

  • Description updated (diff)
  • Status changed from New to In Progress
Actions #6

Updated by Loïc Dachary over 7 years ago

  • Status changed from In Progress to Fix Under Review

https://github.com/ceph/ceph/pull/12304 abandonned because too complicated

Actions #7

Updated by Loïc Dachary over 7 years ago

https://jenkins.ceph.com/job/ceph-pull-requests/15424/ (master)

155/155 Test #144: unittest_pglog ..........................***Timeout 3600.01 sec
[==========] Running 19 tests from 1 test case.
[----------] Global test environment set-up.
[----------] 19 tests from PGLogTest
[ RUN      ] PGLogTest.rewind_divergent_log

[WARNING] /home/jenkins-build/build/workspace/ceph-pull-requests/src/googletest/googletest/src/gtest-death-test.cc:836:: Death tests use fork(), which is unsafe particularly in a threaded context. For this test, Google Test detected 3 threads.

99% tests passed, 1 tests failed out of 155

Total Test time (real) = 4005.07 sec

The following tests FAILED:
    144 - unittest_pglog (Timeout)
Actions #8

Updated by Loïc Dachary over 7 years ago

https://github.com/ceph/ceph/pull/12361 removing EXPECT_DEATH tests as per Sam advice

Actions #9

Updated by Kefu Chai over 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions #10

Updated by Nathan Cutler about 6 years ago

  • Related to Bug #23504: tests: unittest_pglog timeout added
Actions

Also available in: Atom PDF