tests: stabilize TestPGLog

Do not use EXPECT_DEATH because it is unsafe when there are threads and
lead to intermittent failures.

Fixes: http://tracker.ceph.com/issues/18030

Signed-off-by: Loic Dachary <loic@dachary.org>